# artifacts/api-server/src/routes/index.ts
@@ -4,6 +4,8 @@ import authRouter from "./auth";
 import cryptoRouter from "./crypto";
 import transactionsRouter from "./transactions";
 import adminRouter from "./admin";
+import openaiRouter from "./openai";
+import stripeRouter from "./stripe";
 
 const router: IRouter = Router();
 
@@ -12,5 +14,7 @@ router.use(authRouter);
 router.use(cryptoRouter);
 router.use(transactionsRouter);
 router.use(adminRouter);
+router.use(openaiRouter);
+router.use(stripeRouter);
 
 export default router;
